--- a/index.css
+++ b/index.css
@@ -41,3 +41,17 @@ h2{
 	
 	font-weight: 800;
 }
+
+.signature{
+	font-family: Raleway;
+	
+	font-size: 10px;
+	font-weight: 800;
+	
+	padding-bottom: 0px;
+}
+
+.Questions{
+	margin: 1.5%;
+	
+}
