changed colours in lab3

--- a/Lab3/styles/style.css
+++ b/Lab3/styles/style.css
@@ -80,8 +80,8 @@ p{
 }
 
 .btn-group button {
-  background-color: #4CAF50; /* Green background */
-  border: 1px solid green; /* Green border */
+  background-color: black; /* Green background */
+  border: 1px solid white; /* Green border */
   color: white; /* White text */
   padding: 10px 24px; /* Some padding */
   cursor: pointer; /* Pointer/hand icon */
