--- a/Lab3/styles/style.css
+++ b/Lab3/styles/style.css
@@ -42,21 +42,21 @@
 
 h1{
   font-family: Raleway;
-  font-weight: :800;
+  font-weight: 500;
   text-transform: uppercase;
 }
 
 p{
   font-family: Raleway;
   font-size: 12px;
-  font-weight: 800;
+  font-weight: 500;
   padding-bottom:20px;
 }
 
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-  background-color: #ffccdc;
-  color: #444;
+  background-color: black;
+  color: white;
   cursor: pointer;
   padding: 18px;
   width: 100%;
@@ -64,11 +64,13 @@ p{
   border: none;
   outline: none;
   transition: 0.4s;
+  font-size: 16px;
+  font-family: Raleway;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .accordion:hover {
-  background-color: #ccffeb;
+  background-color: #3e8e41;
 }
 
 /* Style the accordion panel. Note: hidden by default */
@@ -86,6 +88,8 @@ p{
   padding: 10px 24px; /* Some padding */
   cursor: pointer; /* Pointer/hand icon */
   float: left; /* Float the buttons side by side */
+  font-family: Raleway;
+  width: 25%;
 }
 
 .btn-group button:not(:last-child) {
@@ -102,4 +106,24 @@ p{
 /* Add a background color on hover */
 .btn-group button:hover {
   background-color: #3e8e41;
+}
+
+.block{
+  background-color: black; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: Raleway;
+}
+.block:hover{
+  background-color: #3e8e41;
+  color: white;
+}
+
+.label{
+  font-family: Raleway;
 }
